Fixed title alignment issue
fixed h1 alignment issue
fixed contact form alignment issue

--- a/css/index.css
+++ b/css/index.css
@@ -36,11 +36,7 @@ body {
     align-items: center;
     width: 250px;
     padding: 20px;
-    margin: auto;
     background-color: rgba(236, 236, 236, 0.219);
-    margin-top: 25px;
-    margin-bottom: 25px;
-
 }
 .profile-pic {
     width: 250px;
@@ -119,6 +115,7 @@ footer {
 h1 {
     display: flex;
     align-items: center;
+    justify-content: space-around;
     font-family: Poppins;
     font-weight: bold;
 }
@@ -190,12 +187,6 @@ section {
     padding: 25px;
 }
 
-h1 { 
-    margin-left: 45%;
-    font-family: Poppins;
-    font-weight: 400;
-    font-size: 36px;
-}
 
 .viewProject {
     display: flex;
@@ -237,14 +228,11 @@ h1 {
 /**Contact Us**/
 
 .contact {
-    margin-left: 15%;
     width: 800px;
     background-color: rgba(236, 236, 236, 0.219);
     padding: 10px;
     padding-left: 10px;
     padding-right: 10px;
-
-
 }
 .contact-title {
     text-align: center;
